--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,43 @@
     package="sameeh.com.nbapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Screens.MainActivity">
+        <activity android:name=".Screens.LoginRegister.LoginRegisterActivity" />
+        <activity
+            android:name=".Screens.Main.LoggedInActivity"
+            android:label="LoggedInActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Screens.LaunchActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Screens.TeamPlayerActivity"></activity>
+        <activity android:name=".Screens.SearchTeamActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Screens.TeamPlayerActivity" />
+        <service
+            android:name=".Services.ProfilePictureService"
+            android:enabled="true"></service>
+
     </application>
 
 </manifest>
